--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -8,11 +8,13 @@
   <body>
     <header>
       <h1>SAMURAIニュース</h1>
+      <nav>
       <a href="https://www.sejuku.net/">ホーム</a>
       <a href="https://www.sejuku.net/">社会</a>
       <a href="https://www.sejuku.net/">経済</a>
       <a href="https://www.sejuku.net/">スポーツ</a>
       <a href="https://www.sejuku.net/">テクノロジー</a>
+      </nav>
     </header>
     <main>
       <article>
@@ -41,7 +43,7 @@
 
             <label>男性</label><input type="radio" name="gender">
             <label>女性</label><input type="radio" name="gender">
-            <laber>その他</laber><input type="radio" name="gender">
+            <label>その他</label><input type="radio" name="gender">
             <br>
 
             <label>おすすめ和菓子の名称</label>
