--- a/kadai_022/kadai_022.html
+++ b/kadai_022/kadai_022.html
@@ -8,7 +8,6 @@
         <title>22章課題</title>
     </head>
     <body>
-       
         <header>
             <h1 class="decoration">今日の傘予報</h1>
         </header>  
@@ -19,21 +18,21 @@
                 <div class="contents">
                     <h2>東京の天気</h2>
                     <p>今日の天気は雨です。</p>
-                    <p><span>傘</span>を持って行ってください。</p>
+                    <p>傘を持って行ってください。</p>
                     <img src="images/rainy.png" alt="雨">
                 </div>
  
                 <div class="contents">
                     <h2>北海道の天気</h2>
                     <p>今日の天気は曇りです。</p>
-                    <p><span>傘</span>は念のため持って行きましょう。</p>
+                    <p>傘は念のため持って行きましょう。</p>
                     <img src="images/cloudy.png" alt="曇り">
                 </div>
  
                 <div class="contents">
                     <h2>沖縄の天気</h2>
                     <p>今日の天気は晴れです。</p>
-                    <p><span>傘</span>は必要ないでしょう</p>
+                    <p>傘は必要ないでしょう</p>
                     <img src="images/sunny.png" alt="晴れ">
                 </div>
 
